# my-blog

./: .env.example  .gitignore  Cargo.toml  README.md
PRDS/: DOC_DRIVEN_DEVELOPMENT.md
PRDS/第一版/: UI设计.md  VERSION_NOTES.md  产品需求.md  开发计划.md
PRDS/第一版/01-首页/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第一版/02-博客系统/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第一版/03-笔记系统/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第一版/04-项目展示/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第一版/05-关于页/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第三版/: VERSION_NOTES.md  产品需求.md  开发计划.md
PRDS/第三版/01-个人主页/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第三版/02-标签与归档/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第三版/03-内容关联/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第三版/04-搜索升级/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第三版/05-内容模型与治理/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第二版/: UI设计.md  VERSION_NOTES.md  产品需求.md  开发计划.md  收尾优化.md
PRDS/第二版/01-搜索系统/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第二版/02-标签与归档/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第二版/03-笔记系统/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第二版/04-项目展示/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第二版/05-SEO与发布质量/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第五版/: VERSION_NOTES.md  v1.0-后续演进清单.md  产品需求.md  开发计划.md
PRDS/第五版/01-数据层与内容后台/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第五版/02-搜索与索引基础设施/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第五版/03-统计与任务系统/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第五版/04-外部同步与开放能力/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第四版/: VERSION_NOTES.md  产品需求.md  开发计划.md
PRDS/第四版/01-数据层与内容后台/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第四版/02-搜索与索引基础设施/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第四版/03-统计与任务系统/: DEV_PLAN.md  PRD.md  UI.md
PRDS/第四版/04-外部同步与开放能力/: DEV_PLAN.md  PRD.md  UI.md
app/: Cargo.toml
app/src/: content.rs  lib.rs
client/: Cargo.toml
client/src/: lib.rs
content/blog/: docs-and-code-in-one-repo.md  first-version-should-feel-real.md  why-no-database-yet.md
content/notes/: docs-before-code-keeps-the-project-calm.md  homepage-should-feel-like-a-workbench.md  ownership-clicked-when-borrowing-hurt.md
content/projects/: my-blog.md  rust-learning-notebook.md  static-demo-v1.md
deploy/: my-blog.service.example  nginx.my-blog.conf.example  v1.0-部署说明.md
scripts/: start-local.ps1  stop-local.ps1
server/: Cargo.toml
server/src/: main.rs
static/: README.md  demo-v1.html  demo-v2-editorial.html
static/css/: demo-v1.css  demo-v2-editorial.css
static/js/: demo-v1.js
style/: main.css
