[workspace]
members = ["app", "client", "server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
any_spawner = "0.3.0"
anyhow = "1.0.100"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
console_error_panic_hook = "0.1.7"
http = "1.3.1"
leptos = "0.8.19"
leptos_axum = "0.8.9"
leptos_meta = "0.8.6"
leptos_router = "0.8.12"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
wasm-bindgen = "0.2.105"

[[workspace.metadata.leptos]]
name = "my-blog"
bin-package = "server"
bin-target = "server"
lib-package = "client"
output-name = "my-blog"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "static"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
