[package]
name = "app"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:anyhow",
  "dep:pulldown-cmark",
  "dep:redis",
  "dep:serde_yaml",
  "dep:sqlx",
  "dep:thiserror",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

[dependencies]
chrono.workspace = true
http.workspace = true
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
serde.workspace = true
web-sys = { version = "0.3.82", features = ["Document", "Element", "HtmlElement", "MediaQueryList", "Storage", "Window"] }

anyhow = { workspace = true, optional = true }
pulldown-cmark = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
