[package]
name = "client"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
hydrate = ["app/hydrate", "leptos/hydrate"]

[dependencies]
app = { path = "../app", default-features = false, features = ["hydrate"] }
any_spawner = { workspace = true, features = ["wasm-bindgen"] }
console_error_panic_hook.workspace = true
leptos = { workspace = true, features = ["hydrate"] }
wasm-bindgen.workspace = true
